@@ -4,6 +4,7 @@ Revision history for Perl extension Plack-Middleware-Assets-RailsLike
     - Removes an unused variable.
     - Uses Errno::ENOENT instead of %! for speed.
     - Creates max_age in constructor.
+    - Adds the expires option as extra argument when contents stored.
 
 0.07 2013-06-11T10:17:37Z
     - Updates POD.
